--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "webpack": "^5.77.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.2"
+  },
+  "dependencies": {
+    "firebase": "^9.19.1"
   }
 }
